[package]
name = "mayonnaise"
version = "0.1.0"
authors = ["zaitsev.o"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "emu"
path = "src/lib.rs"

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["ttf"]