[package]
name = "mayonnaise"
version = "0.1.0"
authors = ["zvoleg <oleg.zaitsevv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "emu"
path = "src/lib.rs"

[dependencies]
spriter = { git="https://github.com/zvoleg/spriter" }
